# aion-edu

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  clippy.toml  eleven.env.example
captions/: act1.srt  act2.srt  (+1 more)
crates/aion-edu-cli/: Cargo.toml
crates/aion-edu-cli/src/: main.rs
crates/aion-edu-teach/: Cargo.toml
crates/aion-edu-teach/assets/astro101-u1-l1/: kepler.py  test_kepler.py
crates/aion-edu-teach/assets/bio101-u1-l1/: evolution.py  test_evolution.py
crates/aion-edu-teach/assets/cs220-u1-l1/: bsearch.py  test_bsearch.py
crates/aion-edu-teach/assets/cs250-u1-l1/: isqrt.py  test_isqrt.py
crates/aion-edu-teach/assets/cs270-u1-l1/: test_tm.py  tm.py
crates/aion-edu-teach/assets/cs330-u1-l1/: ratnum.py  test_ratnum.py
crates/aion-edu-teach/assets/cs340-u1-l1/: process.py  test_clock.py
crates/aion-edu-teach/assets/cs340-u1-l2/: process.py  test_vclock.py
crates/aion-edu-teach/assets/cs440-u1-l1/: byzantine.py  test_byzantine.py
crates/aion-edu-teach/assets/cs450-u1-l1/: linearize.py  test_linearize.py
crates/aion-edu-teach/assets/ee210-u1-l1/: hamming.py  test_hamming.py
crates/aion-edu-teach/assets/gt101-u1-l1/: games.py  test_games.py
crates/aion-edu-teach/assets/it201-u1-l1/: entropy.py  test_entropy.py
crates/aion-edu-teach/assets/logic101-u1-l1/: boole.py  test_boole.py
crates/aion-edu-teach/assets/math110-u1-l1/: linalg.py  test_linalg.py
crates/aion-edu-teach/assets/math110-u1-l2/: proj.py  test_proj.py
crates/aion-edu-teach/assets/math110-u1-l3/: lstsq.py  test_lstsq.py
crates/aion-edu-teach/assets/math110-u2-l1/: eig.py  test_eig.py
crates/aion-edu-teach/assets/math150-u1-l1/: test_tiling.py  tiling.py
crates/aion-edu-teach/assets/math150-u1-l2/: parity.py  test_parity.py
crates/aion-edu-teach/assets/math150-u1-l3/: nim.py  test_nim.py
crates/aion-edu-teach/assets/math210-u1-l1/: euler.py  test_euler.py
crates/aion-edu-teach/assets/math230-u1-l1/: gcd.py  test_gcd.py
crates/aion-edu-teach/assets/math310-u1-l1/: group.py  test_group.py
crates/aion-edu-teach/src/: client.rs  error.rs  event.rs  learner.rs  ledger.rs  lib.rs  protocol.rs
crates/aion-edu-web/: Cargo.toml
crates/aion-edu-web/src/: lib.rs
crates/aion-edu-web/web/: app.css  federate.html  index.html  landing.html
(+88 files in other folders)
