[package]
name = "aion-edu-teach"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aion-edu-core.workspace = true
aion-edu-provenance.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq = { version = "2", features = ["json"] }
